@@ -7,47 +7,65 @@ import org.azidp4j.util.HumanReadable;
 public class RequestParserUtil {
 
     public static Set<String> valuesToStringSet(Object values) {
-        // TODO type check
         if (values == null) {
             return null;
         }
-        if (values instanceof Collection) {
-            var onlyString =
-                    ((Collection<?>) values)
-                            .stream().filter(v -> v instanceof String).collect(Collectors.toSet());
-            return ((Set<String>) onlyString);
+        if (values instanceof Collection cast) {
+            cast.stream()
+                    .forEach(
+                            v -> {
+                                if (!(v instanceof String)) {
+                                    throw new IllegalArgumentException();
+                                }
+                            });
+            return (Set<String>) cast.stream().collect(Collectors.toSet());
         } else if (values instanceof String[]) {
             return Arrays.stream((String[]) values).collect(Collectors.toSet());
+        } else {
+            throw new IllegalArgumentException();
         }
-        return Set.of();
     }
 
     public static List<String> valuesToStringList(Object values) {
-        // TODO type check
         if (values == null) {
             return null;
         }
-        if (values instanceof Collection) {
-            var onlyString =
-                    ((Collection<?>) values)
-                            .stream().filter(v -> v instanceof String).collect(Collectors.toList());
-            return ((List<String>) onlyString);
+        if (values instanceof List cast) {
+            cast.stream()
+                    .forEach(
+                            v -> {
+                                if (!(v instanceof String)) {
+                                    throw new IllegalArgumentException();
+                                }
+                            });
+            return ((List<String>) cast.stream().toList());
         } else if (values instanceof String[]) {
             return Arrays.stream((String[]) values).collect(Collectors.toList());
+        } else {
+            throw new IllegalArgumentException();
         }
-        return List.of();
     }
 
     public static HumanReadable<String> valuesToHumanReadable(
             String key, Map<String, Object> parameters) {
-        // TODO type check
-        var defaultValue = parameters.containsKey(key) ? (String) parameters.get(key) : null;
+        String defaultValue = null;
+        if (parameters.containsKey(key)) {
+            if (parameters.get(key) instanceof String cast) {
+                defaultValue = cast;
+            } else {
+                throw new IllegalArgumentException();
+            }
+        }
         var map = new HashMap<String, String>();
         parameters.keySet().stream()
                 .filter(k -> k.startsWith(key + "#"))
                 .forEach(
                         k -> {
-                            map.put(k.substring(k.indexOf('#') + 1), parameters.get(k).toString());
+                            if (parameters.get(k) instanceof String cast) {
+                                map.put(k.substring(k.indexOf('#') + 1), cast);
+                            } else {
+                                throw new IllegalArgumentException();
+                            }
                         });
         if (defaultValue == null && map.isEmpty()) {
             return null;
